--- a/public/style.css
+++ b/public/style.css
@@ -1,3 +1,101 @@
+@font-face {
+    font-family: 'PacificoRegular';
+    src: url('/fonts/Pacifico-webfont.eot');
+    src: url('/fonts/Pacifico-webfont.eot?#iefix') format('embedded-opentype'),
+         url('/fonts/Pacifico-webfont.woff') format('woff'),
+         url('/fonts/Pacifico-webfont.ttf') format('truetype'),
+         url('/fonts/Pacifico-webfont.svg#PacificoRegular') format('svg');
+    font-weight: normal;
+    font-style: normal;
+}
+
 body {
-  background-color: pink ;
+  background-color: white ;
+  width: 940px;
+  height: 800px;
+  margin: auto;
+  padding-top: 40px;
+}
+
+.page {
+
+  background-color: #37A1ED;
+  width: 900px;
+  color: #fff;
+  padding: 20px;
+  font-family: 'PacificoRegular', 'Brush Script', Helvetica, Arial;
+  margin: auto;
+  height: 800px;
+  background: url("images/calc_it.jpg");
+  background-size: 480px;
+  opacity: 0.9;
+
+}
+
+h1{
+   text-align: center;
+   font-size: 60px;
+   font-weight: normal;
+}
+
+img {
+  height: 300px;
+  float: left;
+}
+
+p {
+margin-top: 40px;
+  font-size: 30px;
+  text-align: center;
+}
+.container {
+  width: 400px;
+  margin: auto;
+  text-align: center;
+}
+
+ul {
+  list-style-type: none;
+  font-size: 24px;
+  text-align: center;
+  padding-left: 0;
+  padding-top: 40px;
+}
+
+a {
+  text-decoration: none;
+  color: #fff;
+}
+
+a:hover,
+a:focus {
+  color: #E8BACA;
+}
+
+form {
+  font-size: 20px;
+}
+
+button {
+  background-color: #E8BACA;
+  border-radius: 10px;
+  font-family: arial;
+}
+
+input {
+  border-radius: 10px;
+  background-color: #E8BACA;
+  padding-left: 10px;
+}
+
+footer {
+  clear: both;
+
+}
+
+.footer {
+    font-family: 'PacificoRegular';
+  font-size: 24px;
+  color: #E8BACA;
+  padding-bottom: 20px;
 }
